Fix outline visibility of date inputs when JS is disabled
When JS is disabled, we also need the overflow to be visible
so that we can see the left-hand edge of the outline on the
day date input.

--- a/service-front/assets/sass/patterns/_form-popup.scss
+++ b/service-front/assets/sass/patterns/_form-popup.scss
@@ -108,8 +108,6 @@
     }
 
     .form-date {
-        overflow: visible;
-
         .form-group {
             margin-bottom: 18px;
         }
